--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+       <meta-data
+        android:name="com.facebook.react.bridge.RNCodePushMetaData"
+        android:value="5af31faf-3fa8-439b-bbe4-e5889e352398" />   
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
