--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-code-push": "^8.2.2",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-gradle-plugin": "^0.71.19",
     "react-native-maps": "^1.13.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.12.3",
